<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/qrResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noscanyet"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/scannedContact"
        android:layout_width="307dp"
        android:layout_height="498dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addContactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opslaanLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.964" />

            <TextView
                android:id="@+id/naamLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naamLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.014" />

            <TextView
                android:id="@+id/naamValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toEndOf="@+id/naamLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.012" />

            <TextView
                android:id="@+id/publiekeEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.07" />

            <TextView
                android:id="@+id/publiekeEmailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toEndOf="@+id/publiekeEmailLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.068" />

            <TextView
                android:id="@+id/telefoonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefoonnummerLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.129" />

            <TextView
                android:id="@+id/telefoonValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.435"
                app:layout_constraintStart_toEndOf="@+id/telefoonLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.129" />

            <TextView
                android:id="@+id/twitterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitterLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.189" />

            <TextView
                android:id="@+id/twitterValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.257"
                app:layout_constraintStart_toEndOf="@+id/twitterLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.187" />

            <TextView
                android:id="@+id/facebookLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebookLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/facebookValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.306"
                app:layout_constraintStart_toEndOf="@+id/facebookLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/snapchatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snapchatLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.311" />

            <TextView
                android:id="@+id/snapchatValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.306"
                app:layout_constraintStart_toEndOf="@+id/snapchatLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.311" />

            <TextView
                android:id="@+id/instagramLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagramLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.373" />

            <TextView
                android:id="@+id/instagramValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.306"
                app:layout_constraintStart_toEndOf="@+id/instagramLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.373" />

            <TextView
                android:id="@+id/linkedinLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkedinLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.436" />

            <TextView
                android:id="@+id/linkedinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.27"
                app:layout_constraintStart_toEndOf="@+id/linkedinLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.436" />

            <TextView
                android:id="@+id/tiktokLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiktokLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501" />

            <TextView
                android:id="@+id/tiktokValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toEndOf="@+id/tiktokLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501" />

            <TextView
                android:id="@+id/geboortedatumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.436"
                app:layout_constraintStart_toEndOf="@+id/geboortedatumLabel3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.567" />

            <TextView
                android:id="@+id/geboortedatumLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geboortedatumLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.567" />

            <TextView
                android:id="@+id/adresLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.632" />

            <TextView
                android:id="@+id/adresValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toEndOf="@+id/adresLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.632" />

            <TextView
                android:id="@+id/woonplaatsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woonplaatsLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.701" />

            <TextView
                android:id="@+id/woonplaatsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.348"
                app:layout_constraintStart_toEndOf="@+id/woonplaatsLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.701" />

            <TextView
                android:id="@+id/postcodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postcodeLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.77" />

            <TextView
                android:id="@+id/postcodeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.306"
                app:layout_constraintStart_toEndOf="@+id/postcodeLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.77" />

            <TextView
                android:id="@+id/landValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.208"
                app:layout_constraintStart_toEndOf="@+id/landLabel2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.837" />

            <TextView
                android:id="@+id/landLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.837" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>








